# document-forensics

./: .gitignore  README.md  forensics.py  pyproject.toml
lang/: en.yml  fr.yml
